--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="no_due_date">No due date</string>
-    <string name="pref_sort_by_key">Sort by</string>
+    <string name="select_due_date">Select due date</string>
+    <string name="pref_sort_by_key" translatable="false">Sort by</string>
     <string name="sort_by">Sort by</string>
     <string name="due_date">Due date</string>
+    <string name="pref_priority_key" translatable="false">Priority</string>
     <string name="priority">Priority</string>
     <string name="high">High</string>
     <string name="low">Low</string>
@@ -13,4 +15,8 @@
     <string name="high_priority">High priority</string>
     <string name="low_priority">Low priority</string>
     <string name="medium_priority">Medium priority</string>
+    <string name="adding_or_editing" translatable="false">Adding or editing</string>
+    <string name="add_new_task">Add New Task</string>
+    <string name="edit_task">Edit Task</string>
+    <string name="describe_your_task">Describe your task</string>
 </resources>
