--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,11 @@
     <string name="high_priority">High priority</string>
     <string name="low_priority">Low priority</string>
     <string name="medium_priority">Medium priority</string>
-    <string name="adding_or_editing" translatable="false">Adding or editing</string>
+    <string name="intent_adding_or_editing_key" translatable="false">Adding or editing</string>
+    <string name="intent_todo_key" translatable="false">Todo</string>
     <string name="add_new_task">Add New Task</string>
     <string name="edit_task">Edit Task</string>
+    <string name="add_task">Add Task</string>
+    <string name="update_task">Update Task</string>
     <string name="describe_your_task">Describe your task</string>
 </resources>
