--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="add_task">Add Task</string>
     <string name="update_task">Update Task</string>
     <string name="describe_your_task">Describe your task</string>
+    <string name="description_cannot_be_empty">Task description cannot be empty.</string>
 </resources>
