--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="action_settings">Settings</string>
     <string name="no_due_date">No due date</string>
+    <string name="none">None</string>
+    <string name="select_date">Select date</string>
     <string name="select_due_date">Select due date</string>
     <string name="pref_sort_by_key" translatable="false">Sort by</string>
     <string name="sort_by">Sort by</string>
