--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Practice Todo App</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_delete_test">Deletion test</string>
     <string name="no_due_date">No due date</string>
     <string name="none">None</string>
     <string name="select_date">Select date</string>
